# HaskellFAI

./: .gitignore  .travis.yml  README.md  stack.yaml
.ci/: travis_ci_script.sh
.travisci/: after.sh  autoscript.sh  build.sh  deploy.sh  init.sh  test.sh
FAI/: ChangeLog.md  FAI.cabal
FAI-platform-cuda/: ChangeLog.md  FAI-platform-cuda.cabal
FAI-platform-cuda/src/Foreign/FAI/Platform/: CUDA.hs
FAI-platform-cuda/src/Foreign/FAI/Platform/CUDA/: Debug.hs
FAI-platform-cuda/test/Foreign/FAI/Platform/: CUDASpec.hs
FAI-platform-host/: ChangeLog.md  FAI-platform-host.cabal
FAI-platform-host/src/Foreign/FAI/Platform/: Host.hs
FAI-platform-host/src/Foreign/FAI/Platform/Host/: Debug.hs
FAI-platform-host/test/Foreign/FAI/Platform/: HostSpec.hs
FAI/debian/: changelog  changelog.in  control  copyright  rules  watch
FAI/src/Foreign/: FAI.hs
FAI/src/Foreign/FAI/: Internal.hs  Types.hs
FAI/src/Foreign/FAI/Platform/: CUDA.hs  Host.hs
FAI/src/Foreign/FAI/Platform/CUDA/: Debug.hs
FAI/src/Foreign/FAI/Platform/Host/: Debug.hs
FAI/src/Foreign/FAI/Types/: Accelerate.hs  Buffer.hs  Context.hs  Exception.hs  FAI.hs  Shape.hs
FAI/test/FAI/: Host.hs
FAI/test/Foreign/FAI/Platform/: CUDASpec.hs  HostSpec.hs
example/example-blas/: .gitignore  CMakeLists.txt  ReadMe.md  gtest.cmake.in
example/example-blas/include/: activation_function.h  config.h  config_gen.h.in  matrix_opt.h  seq_opt.h  sequence_inline_function.h  test_prelude.h  vector_opt.h
example/example-blas/include/example-blas/: activation_function.h  basic_function.h  computer_vision.h  example_blas.h  fill.h  hyperbolic_function.h  matrix_function.h  trigonometric_function.h
example/example-blas/source/: activation_function.c  basic_function.c  computer_vison.c  example_blas.c  fill.c  hyperbolic_function.c  matrix_function.c  matrix_opt.c  seq_opt.c  trigonometric_function.c  vector_opt.c
example/example-blas/test/: activation_function_test.cc  basic_function_test.cc  blas_config_test.cc  computer_vision_test.cc  fil_test.cc  fill_test.cc  hyperbolic_function_test.cc  matrix_function_test.cc  matrix_opt_test.cc  test.cc  test_prelude.h  trigonometric_function_test.cc  vector_opt_test.cc
example/hExampleBLAS/: ChangeLog.md  hExampleBLAS.cabal
example/hExampleBLAS-binding/: ChangeLog.md  hExampleBLAS-binding.cabal
example/hExampleBLAS-binding/src/Accelerate/ExampleBLAS/Binding/: BasicFunction.chs  Fill.chs  HyperbolicFunction.chs  TrigonometricFunction.chs
example/hExampleBLAS/src/Accelerate/ExampleBLAS/: ActivationFunction.hs  BasicFunction.hs  ComputerVision.hs  ExampleBLAS.hs  Fill.hs  HyperbolicFunction.hs  LoadImg.hs  MatrixFunction.hs  TH.hs  TrigonometricFunction.hs  Wrapper.hs
example/hExampleBLAS/src/Accelerate/ExampleBLAS/Binding/: ActivationFunction.chs  BasicFunction.chs  ComputerVision.chs  ExampleBLAS.chs  GenTH.hs  MatrixFunction.chs
example/hExampleBLAS/src/Accelerate/ExampleBLAS/LoadImg/: CUDA.hs
